[package]
name = "ride"
version = "0.2.0"
authors = ["jw3"]
edition = "2018"

[dependencies]
# using untagged commit to get https://github.com/georust/geo/pull/416 ; should be in 0.14.2
geo = { git = "https://github.com/georust/geo", rev = "6fb4fb7684b84cec1926e4fbb0a37b6f73a16632" }
gdal = "0.6.0"
timer = "0.2.0"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
clap = "3.0.0-beta.2"
log = "0.4.11"
env_logger = "0.7.1"
actix = "0.10"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
futures-util = "0.3.5"
tokio-timer = "0.2.13"
