[package]
name = "ride"
version = "0.3.0"
authors = ["jw3"]
edition = "2018"

[lib]
name = "libride"
path = "src/lib.rs"

[[bin]]
name = "ride"
path = "src/bin/bin.rs"

[dependencies]
geo = "0.18.0"
gdal = "0.8.0"
timer = "0.2.0"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
clap = "3.0.0-beta.2"
log = "0.4.11"
env_logger = "0.7.1"
actix = "0.10"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
paho-mqtt = "0.9.1"
